dataset1235/2025-2/805158916/users/2847101731/executions/2651470117_3921830315.log
== RUN (2025-08-25 14:20:09)
-- CODE: 
lgas=float(input("quantL?"))
quantL=(2.86*50)/100
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantL?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantL?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantL?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantL?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantL?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantL?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:54:28)
-- CODE: 
lgas=float(input("quantidade abastecida? "))
quantL=float(input(2.86*50))/100
valortotal=float(input(quantL))+50
                 
print(round(valortotal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:21:01)
-- CODE: 
lgas=float(input("quantL?"))
quantL=float(input(2.86*50))/100
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:01:31)
-- CODE: 
lgas=float(input("quantidade abastecida? "))
pgas=2.86
oleo=50
valorgas=lgas*pgas
vservico=valorgas+oleo
valortotal=vservico*(1+34/100)
                 
print(round(valortotal,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade abastecida? 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade abastecida? 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade abastecida? 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade abastecida? 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade abastecida? 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade abastecida? 230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:20:21)
-- CODE: 
lgas=float(input("quantL?"))
quantL=(2.86*50)/100
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantL?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantL?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantL?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantL?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantL?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantL?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:51:59)
-- CODE: 
lgas=float(input("quantidade abastecida? "))
quantL=float(input(2.86*50))/100
valortotal=float(input(quantL)+50)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:23:47)
-- CODE: 
lgas=float(input("quantidade abastecida? "))
quantL=float(input(2.86*50))/100
valortotal=float(input(quantL)+50)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantL=float(input(2.86*50))/100
                 ^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:18:40)
-- CODE: 
lgas=float(input("quantL?"))
quantL=
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 2
    quantL=
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 2
    quantL=
           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 2
    quantL=
           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 2
    quantL=
           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 2
    quantL=
           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 2
    quantL=
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
